--- a/style.css
+++ b/style.css
@@ -145,7 +145,26 @@
     justify-content: center;
     align-items: center;
 }
-
 .fa-bell-slash{
     color: #8edafc;
+}
+.search-chat{
+    width: 100%;
+    height: 35px;
+    background-color: #f9f9f9;
+}
+.input-search-chat{
+    width: 85%;
+    height: 80%;
+    border: 0;
+    font-size: 10px;
+    outline: none;
+    padding-left: 15px;
+    background-color: #fff;
+}
+#button-search-col-4{
+    height: 85%;
+    width: 35px;
+    border: none;    
+    background-color: white;
 }
