--- a/style.css
+++ b/style.css
@@ -168,3 +168,35 @@
     border: none;    
     background-color: white;
 }
+
+/* container lista chat left */
+.chat-container{
+    width: 100%;
+    height: 70px;
+    background-color: #fff;
+    border-bottom: 1px solid #b1b1b1;
+}
+.chat-list{
+    margin: 0 auto;
+}
+.nome-avatar-chat{
+    font-size: 16px;
+}
+.last-message{
+    font-size: 12px;
+    opacity: 50%;
+}
+.time-message{
+    position: relative;
+    top: -25px;
+    left: 150px;
+}
+.time{
+    font-size: 11px;
+    opacity: 50%;
+}
+
+/* messaggi in viewchat */
+.message-received{
+    
+}
