--- a/style.css
+++ b/style.css
@@ -56,13 +56,8 @@
 }
 .chat {
     width: 100%;
-    height: 90%;
+    height: calc(90% - 55px);
     background-image: url("imgs/mine.jpg");
-}
-.input-txt {
-    width: 100%;
-    height: 55px;
-    background-color: white;
 }
 .cont-input {
     width: 100%;
@@ -71,6 +66,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: #f3eeea;
 }
 #txt {
     background-color: #fff;
@@ -181,12 +177,11 @@
     font-size: 12px;
     opacity: 50%;
 }
-.time-message{
-    position: relative;
-    top: -25px;
-    left: 150px;
+.info-avatar-chat{
+    width: 75%;
 }
 .time{
+    width: 20%;
     font-size: 11px;
     opacity: 50%;
 }
@@ -194,18 +189,15 @@
 /* messaggi in viewchat */
 .message-send{
     background-color: #d5f9ba;
-    padding: 20px;
+    padding: 10px;
     border-radius: 20px;
+    margin-left: 50%;
 }
 .message-received{
     background-color: #fff;
-    padding: 20px;
+    padding: 10px;
     border-radius: 20px;
 }
 .text-message{
-    font-size: 11px;
-    line-height: 5px;
-    color: #000;
-    opacity: 70%;
-    text-align: start;
+    font-size: 12px;
 }
