--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@
     width: 100%;
     height: calc(90% - 55px);
     background-image: url("imgs/mine.jpg");
+    overflow-y: auto;
 }
 .cont-input {
     width: 100%;
@@ -163,12 +164,13 @@
 /* container lista chat left */
 .chat-container{
     width: 100%;
-    height: 70px;
+    height: calc(90% - 115px);
     background-color: #fff;
-    border-bottom: 1px solid #b1b1b1;
+    overflow-y: auto;
 }
 .chat-list{
     margin: 0 auto;
+    border-bottom: 1px solid #b1b1b1;
 }
 .nome-avatar-chat{
     font-size: 16px;
@@ -182,21 +184,22 @@
 }
 .time{
     width: 20%;
-    font-size: 11px;
+    font-size: 8px;
     opacity: 50%;
+    line-height: 10px;
+    display: inline-block;
 }
 
 /* messaggi in viewchat */
 .message-send{
     background-color: #d5f9ba;
     padding: 10px;
-    border-radius: 20px;
-    margin-left: 50%;
+    border-radius: 10px;
 }
 .message-received{
     background-color: #fff;
     padding: 10px;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 .text-message{
     font-size: 12px;
