problema collegamento messaggi

--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@
 }
 
 /* messaggi in viewchat */
-.message-send{
+.message-sent{
     background-color: #d5f9ba;
     padding: 10px;
     border-radius: 10px;
